# llm-spend

./: .gitignore  README.md  blog-post.md  pyproject.toml
.github/workflows/: ci.yml
src/llm_spend/: __init__.py  cli.py  pricing.py  reporter.py  store.py  tracker.py
tests/: test_pricing.py  test_reporter.py  test_store.py  test_tracker.py
